# dep-sentinel

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DECISIONS.md  RELEASE_CHECKLIST.md  RELEASING.md
prompts/: add-cli-command.md  add-parser.md
src/depaudit/: __init__.py  __main__.py  cli.py  diffing.py  licenses.py  model.py  models.py  normalize.py  output.py  policy.py  report.py  scan.py  scanner.py
src/depaudit/parsers/: __init__.py  base.py  crates.py  gomod.py  gradle.py  manifest.py  maven.py  npm.py  nuget.py  pypi.py  registry.py
tests/: test_cli.py  test_diff.py  test_fixture_scans.py  test_licenses_policy.py  test_normalize.py  test_parser_registry.py  test_parsers_mvp.py  test_report.py  test_scan.py
tests/fixtures/dotnet_packages_lock/: packages.lock.json
tests/fixtures/go_go_mod/: go.mod
tests/fixtures/java_gradle_lock/: gradle.lockfile
tests/fixtures/java_pom/: pom.xml
tests/fixtures/node_package_lock/: package-lock.json
tests/fixtures/python_pyproject/: pyproject.toml
tests/fixtures/repos/duplicates/: package-lock.json
tests/fixtures/repos/with_gitignore/: .gitignore
