[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "depaudit"
version = "0.1.0"
description = "Offline deterministic dependency inventory CLI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "depaudit contributors" }]
license = { text = "MIT" }
keywords = ["dependencies", "inventory", "compliance", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]

[project.scripts]
depaudit = "depaudit.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
